--- a/numerical/meson.build
+++ b/numerical/meson.build
@@ -1,5 +1,7 @@
 mpimod = library('mpimod',
-  sources: ['mpimod/mpimod.F90', 'mpimod/mpisend.f90', 'mpimod/mpirecv.f90', 'mpimod/mpihalo.f90'],
+  sources: ['mpimod/mpimod.F90', 'mpimod/mpisend.f90',
+            'mpimod/mpirecv32.f90', 'mpimod/mpirecv64.f90',
+            'mpimod/mpihalo.f90'],
   dependencies: mpi,
   link_with: const,
   fortran_args: real_bits)
