--- a/meson_options.txt
+++ b/meson_options.txt
@@ -6,3 +6,4 @@ option('LAPACK_ROOT', type : 'string', description : 'root directory of LAPACK')
 option('SCALAPACK_ROOT', type : 'string', description : 'root directory of SCALAPACK')
 option('MUMPS_ROOT', type : 'string', description : 'root directory of MUMPS')
 option('MPI_ROOT', type : 'string', description : 'root directory of MPI')
+option('MKLROOT', type : 'string', description : 'MKL root directory')
