--- a/tests/meson.build
+++ b/tests/meson.build
@@ -7,8 +7,9 @@ test('MPI_OK', test_mpi_exe,
 
 
 test_mumps_exe = executable('test_mumps', 'test_mumps.F90',
-  dependencies: [mumps, mpi],
-  fortran_args: real_bits)
+  dependencies: [mumps, blacs, mpi],
+  fortran_args: real_bits,
+  link_language: 'fortran')
 test('MUMPS', mpiexec,
   args: ['-np', '2', test_mumps_exe],
   workdir: meson.current_source_dir(),
