--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,16 +1,24 @@
 test_mpi_exe = executable('test_mpi', 'test_mpi.f90',
   dependencies: mpi,
   link_language: 'fortran')
-test('MPI_OK', test_mpi_exe,
+test('MPI basic', test_mpi_exe,
+  timeout: 10,
+  suite: 'unit')
+
+test_scalapack_exe = executable('test_scalapack', 'test_scalapack.f90',
+  dependencies: [scalapack, blacs, mpi],
+  link_language: 'fortran')
+test('Scalapack basic', test_scalapack_exe,
   timeout: 10,
   suite: 'unit')
 
 
+
 test_mumps_exe = executable('test_mumps', 'test_mumps.F90',
-  dependencies: [mumps, blacs, mpi],
+  dependencies: [mumps, scalapack, blacs, mpi],
   fortran_args: real_bits,
   link_language: 'fortran')
-test('MUMPS', mpiexec,
+test('MUMPS basic', mpiexec,
   args: ['-np', '2', test_mumps_exe],
   workdir: meson.current_source_dir(),
   timeout: 15,
