--- a/numerical/potential/meson.build
+++ b/numerical/potential/meson.build
@@ -13,17 +13,22 @@ test_potential2d = executable('test_potential2d', 'test_potential2D.f90',
   link_with: [pde_elliptic, const],
   dependencies: [blacs, mpi],
   link_language: 'fortran')
-test('potential2d', test_potential2d, timeout: 30, suite: 'unit')
+test('potential2d', test_potential2d,
+  timeout: 30,
+  env: nomalloc_env,
+  suite: 'unit')
 
 test('potential2d_octave', octave,
   args: ['-q', '--eval', 'test_potential2D("' + meson.build_root() / 'test_potential2D.dat")'],
   timeout: 15,
+  env: nomalloc_env,
   workdir: meson.current_source_dir(),
   suite: 'unit', priority: -100)
 
 test('potential2d_python', python,
   args: ['test_potential2d.py', meson.build_root() / 'test_potential2D.dat'],
   timeout: 15,
+  env: nomalloc_env,
   workdir: meson.current_source_dir(),
   suite: 'unit', priority: -100)
 
