--- a/tests/meson.build
+++ b/tests/meson.build
@@ -8,7 +8,7 @@ test('mpi_basic', test_mpi_exe,
 
 
 test_scalapack_exe = executable('test_scalapack', 'test_scalapack.f90',
-  dependencies: [scalapack, blacs, mpi],
+  dependencies: [scalapack, blacs, lapack, mpi],
   link_language: 'fortran')
 test('scalapack_basic', test_scalapack_exe,
   timeout: 10,
@@ -16,7 +16,7 @@ test('scalapack_basic', test_scalapack_exe,
   suite: 'unit')
 
 test_mumps_exe = executable('test_mumps', 'test_mumps.F90',
-  dependencies: [mumps, scalapack, blacs, mpi],
+  dependencies: [mumps, scalapack, blacs, lapack, mpi],
   fortran_args: real_bits,
   link_language: 'fortran')
 test('mumps_basic', mpiexec,
