--- a/.github/workflows/ci_debug_build.yml
+++ b/.github/workflows/ci_debug_build.yml
@@ -27,10 +27,15 @@ jobs:
     - name: Install prereqs
       run: |
         sudo apt update -yq
-        sudo apt install -yq --no-install-recommends gfortran liblapack-dev libscalapack-mpi-dev libmumps-dev libopenmpi-dev openmpi-bin libhdf5-dev octave
+        sudo apt install -yq --no-install-recommends pkg-config gfortran liblapack-dev libscalapack-openmpi-dev libmumps-dev libopenmpi-dev openmpi-bin libhdf5-dev octave
     - run: meson setup build --buildtype=debug -Dhdf5=enabled
       env:
         FC: gfortran
+    - uses: actions/upload-artifact@v1
+      if: always()
+      with:
+        name: LinuxDebug_Meson_Configlog
+        path: build/meson-logs/meson-log.txt
     - run: pytest
     - run: ninja -C build
     - run: meson test -C build --suite unit -v
