--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -8,11 +8,15 @@ on:
     paths:
       - "**.f90"
       - "**.F90"
+      - "**.cmake"
+      - "**.build"
       - ".github/workflows/ci_linux.yml"
   pull_request:
     paths:
       - "**.f90"
       - "**.F90"
+      - "**.cmake"
+      - "**.build"
       - ".github/workflows/ci_linux.yml"
 
 jobs:
@@ -28,7 +32,7 @@ jobs:
     - name: Install packages
       run: |
         sudo apt update -yq
-        sudo apt install -yq --no-install-recommends ninja-build gfortran libopenmpi-dev openmpi-bin liblapack-dev libscalapack-mpi-dev libmumps-dev libhdf5-dev libpthread-stubs0-dev
+        sudo apt install -yq --no-install-recommends pkg-config gfortran libopenmpi-dev openmpi-bin liblapack-dev libscalapack-openmpi-dev libmumps-dev libhdf5-dev libpthread-stubs0-dev
     - name: Setup CMake
       run: |
         pip install cmakeutils
@@ -59,10 +63,15 @@ jobs:
     - name: Install packages
       run: |
         sudo apt update -yq
-        sudo apt install -yq --no-install-recommends ninja-build gfortran libopenmpi-dev openmpi-bin liblapack-dev libscalapack-mpi-dev libmumps-dev libhdf5-dev
+        sudo apt install -yq --no-install-recommends pkg-config gfortran libopenmpi-dev openmpi-bin liblapack-dev libscalapack-openmpi-dev libmumps-dev libhdf5-dev
     - run: meson setup build -Dhdf5=enabled
       env:
         FC: gfortran
+    - uses: actions/upload-artifact@v1
+      if: always()
+      with:
+        name: Linux_Meson_Configlog
+        path: build/meson-logs/meson-log.txt
     - run: ninja -C build
     - run: meson test -C build --suite unit -v
     - run: meson test -C build --suite 2d_fang -v
