--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('GEMINI', 'fortran',
+project('GEMINI', 'c', 'fortran',
   version: '0.2.0',
   meson_version: '>=0.52.0',
   default_options : ['default_library=static', 'buildtype=release'])
