--- a/meson_options.txt
+++ b/meson_options.txt
@@ -4,3 +4,4 @@ option('matlab', type : 'feature', value: 'disabled', description : 'Matlab >= R
 option('hdf5', type: 'feature', value: 'enabled', description: 'HDF5 I/O instead of raw binary files')
 option('MUMPS_ROOT', type : 'string', description : 'root directory of MUMPS')
 option('mklroot', type : 'string', description : 'MKL root directory')
+option('np', type : 'integer', value: 0, description : 'manually set number of MPI images')
