--- a/numerical/potential/CMakeLists.txt
+++ b/numerical/potential/CMakeLists.txt
@@ -13,12 +13,18 @@ target_include_directories(potential PRIVATE ${MUMPS_INCLUDE_DIRS})
 target_compile_definitions(potential PRIVATE REALBITS=${realbits})
 set_target_properties(potential PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
 
-add_executable(test_potential2D test_potential2D.f90)
-target_link_libraries(test_potential2D const PDEelliptic ${MUMPS_LIBRARIES} MPI::MPI_Fortran)
-set_target_properties(test_potential2D PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
-add_test(NAME potential2d COMMAND test_potential2D WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+add_executable(test_potential2d test_potential2D.f90)
+target_link_libraries(test_potential2d const PDEelliptic ${MUMPS_LIBRARIES} MPI::MPI_Fortran)
+set_target_properties(test_potential2d PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
+add_test(NAME potential2d COMMAND test_potential2d WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 set_tests_properties(potential2d PROPERTIES TIMEOUT 30
                      FIXTURES_SETUP GemPot)
+
+if(mumps_external)
+  foreach(l PDEelliptic potential test_potential2d)
+    add_dependencies(${l} MUMPS)
+  endforeach()
+endif()
 
 if(OctaveOK)
 add_test(NAME OctavePotential2d
