--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,14 +21,18 @@ set_tests_properties(ScalapackBasic PROPERTIES
   FIXTURES_SETUP MPIMUMPS)
 
 # ---
-add_executable(testmumps test_mumps.F90)
-target_include_directories(testmumps PRIVATE ${MUMPS_INCLUDE_DIRS})
-target_compile_options(testmumps PRIVATE ${FFLAGS})
-target_compile_definitions(testmumps PRIVATE REALBITS=${realbits})
-target_link_libraries(testmumps PRIVATE ${MUMPS_LIBRARIES} MPI::MPI_Fortran)
+add_executable(test_mumps test_mumps.F90)
+target_include_directories(test_mumps PRIVATE ${MUMPS_INCLUDE_DIRS})
+target_compile_options(test_mumps PRIVATE ${FFLAGS})
+target_compile_definitions(test_mumps PRIVATE REALBITS=${realbits})
+target_link_libraries(test_mumps PRIVATE ${MUMPS_LIBRARIES} MPI::MPI_Fortran)
+
+if(mumps_external)
+  add_dependencies(test_mumps MUMPS)
+endif()
 
 add_test(NAME MUMPSbasic
-  COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 $<TARGET_FILE:testmumps>
+  COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 $<TARGET_FILE:test_mumps>
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
 set_tests_properties(MUMPSbasic PROPERTIES
