cmake: cleanup mumps external options
cmake: mumps external set default for metis/scotch

ci: python default to python 3.8

--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -9,6 +9,7 @@ on:
       - "**.F90"
       - "**.cmake"
       - "**.build"
+      - "**.txt"
       - ".github/workflows/ci_macos.yml"
   pull_request:
     paths:
