--- a/io/CMakeLists.txt
+++ b/io/CMakeLists.txt
@@ -9,6 +9,8 @@ set_target_properties(logging PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY
 #=== io library
 if(hdf5)
   set(io_src plasma_output_hdf5.f90 mag_hdf5.f90 aurora_hdf5.f90)
+elseif(netcdf)
+  set(io_src plasma_output_ncdf.f90 mag_ncdf.f90 aurora_ncdf.f90)
 else()
   set(io_src plasma_output_raw.f90 mag_raw.f90 aurora_raw.f90)
 endif()
@@ -31,4 +33,7 @@ if(hdf5)
   target_include_directories(io PUBLIC ${HDF5_INCLUDE_DIRS} ${HDF5_Fortran_INCLUDE_DIRS})
   target_compile_options(io PUBLIC ${HDF5_Fortran_DEFINITIONS})
   target_link_libraries(io PUBLIC h5fortran ${HDF5_Fortran_HL_LIBRARIES} ${HDF5_Fortran_LIBRARIES})
+elseif(netcdf)
+  target_include_directories(io PUBLIC ${NetCDF_INCLUDE_DIRS})
+  target_link_libraries(io PUBLIC nc4fortran ${NetCDF_LIBRARIES})
 endif()
